samples/_failures_safe/1761531247_9fc124_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_833c1a8c.c: In function ‘main’:
./samples/SAFE/__tmp_833c1a8c.c:176:12: error: missing terminating " character
  176 |     printf("Inputs:
      |            ^~~~~~~~
./samples/SAFE/__tmp_833c1a8c.c:176:5: error: expected expression at end of input
  176 |     printf("Inputs:
      |     ^~~~~~
./samples/SAFE/__tmp_833c1a8c.c:176:5: error: expected declaration or statement at end of input
